Add variables to multiple svgs, align colors with filters

--- a/app/css/components/checkbox.css
+++ b/app/css/components/checkbox.css
@@ -55,5 +55,6 @@ label.c-checkbox-wrapper {
         width: 9px;
         transition: transform 0.2s linear;
         transform: scale(0);
+        @apply filter-textColor1;
     }
 }
