--- a/app/css/components/mentor/solution-row.css
+++ b/app/css/components/mentor/solution-row.css
@@ -63,13 +63,14 @@
         }
         & .--comments-count {
             @apply flex items-center justify-center ml-56;
-            @apply font-semibold text-14 leading-code;
+            @apply font-semibold text-14 text-textColor6 leading-code;
             @apply py-4 px-12 border-orange border-1 rounded-5 bg-lightOrange;
             width: 66px;
             & .c-icon {
-                @apply mr-6 text-orange;
+                @apply mr-6;
                 height: 16px;
                 width: 16px;
+                @apply filter-textColor6;
             }
         }
         & .--status {
@@ -84,7 +85,8 @@
         }
 
         & .action-icon {
-            @apply ml-36 text-textColor6;
+            @apply ml-36;
+            @apply filter-textColor6;
 
             height: 16px;
             width: 16px;
