--- a/app/css/pages/mentoring/testimonials.css
+++ b/app/css/pages/mentoring/testimonials.css
@@ -28,7 +28,7 @@
                 height: 48px;
                 width: 48px;
                 @apply mb-12;
-                filter: var(--textColor6-filter);
+                @apply filter-textColor6;
             }
             & h2 {
                 @apply text-18 leading-160 font-medium text-textColor6;
@@ -72,6 +72,10 @@
             & .options-button {
                 @apply py-12 px-24;
                 @apply border-l-1 border-borderColor6;
+
+                .c-icon {
+                    @apply filter-textColor6;
+                }
             }
         }
         & .testimonial,
@@ -119,6 +123,7 @@
                 height: 16px;
                 width: 16px;
                 @apply ml-56;
+                @apply filter-textColor6;
             }
         }
     }
