Add feb swag update

--- a/app/views/mailers/mailshots_mailer/challenge_12in23_feb_swag.html.erb
+++ b/app/views/mailers/mailshots_mailer/challenge_12in23_feb_swag.html.erb
@@ -507,31 +507,40 @@ div.preheader {
                 <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
                   <p style="margin-top: 16px;margin-bottom: 0;">Hi <%= @user.handle %>,</p>
                   <p style="margin-top: 16px;margin-bottom: 0;">
-                  I hope you're enjoying #12in23 and 
-                  <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://exercism.org/challenges/12in23"><span style="color:#2e57e8">Functional February</span></a>.
-                  Thousands of people have been taking part and having loads of fun. I hope you've found it a useful and entertaining month so far!
-                  </p>
-                  <p style="margin-top: 16px;margin-bottom: 0;">
-                    Tomorrow (Tues 21st) at 18:30 UTC, I'm going to be chatting to
-                    <strong style="font-weight:600">Louis Pilfold, the creator of Gleam</strong>, exploring Gleam, functional programming, and asking him your questions!
-                    You can watch and join in on
-                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://youtube.com/live/IlPOUuIZnec"><span style="color:#2e57e8">YouTube</span></a>
-                    or
-                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://twitch.tv/exercismlive"><span style="color:#2e57e8">Twitch</span></a>.
-                  </p>
-
-                  <p style="margin-top: 16px;margin-bottom: 0;">
-                    In the meantime, you might like to watch this short update I just released, chatting about how #12in23 came to be, our plan for the year, news on a new badge (everyone loves a badge!) and more.
+                    We're getting close to the end of 
+                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://exercism.org/challenges/12in23"><span style="color:#2e57e8">Functional February</span></a>.
+                    now, but we've still got a few things to share!
+                    Firstly, we've now launched our Functional Febrary swag. We've put together t-shirts and hoodies in a couple of designs celebrating functional programming. They'll be available for the next few weeks only!
+                    Get them in the
+                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://swag.exercism.org"><span style="color:#2e57e8">SWAG Store</span></a>.
                   </p>
 
                   <p style="margin-top: 15px;margin-bottom: 0;">
-                    <a href="https://www.youtube.com/watch?v=e15lRHLJQKI" style="display:block; box-shadow: 0px 2px 4px #0F0923">
-                      <img src="https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-12in23-feb-update-with-play-icon.jpg" style="width:100%; display:block"/>
+                    <a href="https://swag.exercism.org/" style="display:block; box-shadow: 0px 2px 4px #0F0923">
+                      <img src="https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/ff-swag.jpg" style="width:100%; display:block"/>
                     </a>
                   </p>
 
+                  <p style="margin-top: 24px;margin-bottom: 0;">
+                  Erik's also been releasing a few more videos in his "A Brief Introduction to..." series. We have 
+                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://www.youtube.com/watch?v=AOF9njfbfnY"><span style="color:#2e57e8">F#</span></a>,
+                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://www.youtube.com/watch?v=8DgYr-V5xkg"><span style="color:#2e57e8">Elixir</span></a>
+                    and 
+                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://www.youtube.com/watch?v=OuFcEQJs34w"><span style="color:#2e57e8">Haskell</span></a>
+                    launched, and others including Gleam and Scala coming in the next couple of days.
+                    They're a useful, concise introduction to programming languages, explaining why you'd want to use them and demonstrating their usage through solving an Exercism exercise.
+                    Check them out on YouTube 👇🏽
+                  </p>
+
+                  <p style="margin-top: 15px;margin-bottom: 0;">
+                    <a href="https://www.youtube.com/watch?v=OuFcEQJs34w" style="display:block; box-shadow: 0px 2px 4px #0F0923">
+                      <img src="https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-intro-to-haskell-with-play-icon.jpg" style="width:100%; display:block"/>
+                    </a>
+                  </p>
+
+
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    Have a great day,
+                    I really hope you've enjoyed Functional February. See you for Mechanical March!
                   </p>
 
                   <p style="margin-top: 8px;margin-bottom: 20px;">
