Fix filters, svg colours on about page

--- a/app/css/pages/about.css
+++ b/app/css/pages/about.css
@@ -10,6 +10,7 @@
         & .logo {
             height: 80px;
             width: 80px;
+            @apply filter-textColor1;
         }
         & p {
             max-width: 1024px;
