--- a/app/views/about/organisation_supporters.html.haml
+++ b/app/views/about/organisation_supporters.html.haml
@@ -93,7 +93,7 @@
             funded the creation of Exercism v3 as part of a wider research project into how people evolve programming skills and knowledge across multiple languages.
 
         .supporter
-          = icon "mozilla", "Mozilla", category: :partners, css_class: "logo mozilla"
+          = icon "mozilla", "Mozilla", category: :partners, css_class: "logo mozilla filter-textColor1"
           %p
             %strong Mozilla
             supported us in the creation of our automated analyzers. They funded the product design, prototype, and analyzer infrastructure, saving thousands of hours of mentors time, and dramatically reducing wait-times for students.
