--- a/app/views/about/impact.html.haml
+++ b/app/views/about/impact.html.haml
@@ -12,8 +12,8 @@
       Exercism Impact Report
     %h2.text-h0.mb-12.text-center{ class: 'max-w-[800px]' }
       We&apos;ve provided
-      %strong{ class: 'pl-8 pr-12 font-bold bg-[url(graphics/impact-highlight.svg)] bg-[length:100%_100%]' } 104,220,130
-      %strong{ class: 'pl-8 pr-8 mr-[-8px] font-bold bg-[url(graphics/impact-highlight.svg)] bg-[length:100%_100%]' } minutes
+      %strong{ class: 'pl-8 pr-12 font-bold bg-[url(graphics/impact-highlight.svg)] bg-[length:100%_100%] text-textColor1NoDark' } 104,220,130
+      %strong{ class: 'pl-8 pr-8 mr-[-8px] font-bold bg-[url(graphics/impact-highlight.svg)] bg-[length:100%_100%] text-textColor1NoDark' } minutes
       of free education.
     %p.font-medium.text-textColor6.text-24.leading-160.text-center{ class: 'max-w-[780px]' }
       And we provide another 132,916 minutes every day!
@@ -24,7 +24,7 @@
     .flex.flex-col.md:flex-row.md:items-stretch
       .md:mr-32.mb-40.md:mb-0{ class: 'w-fill md:max-w-[380px]' }
         .shadow-lgZ1.py-8.rounded-16.mb-32
-          .py-12.px-32.bg-purpleHover
+          .py-12.px-32.bg-backgroundColorF
             %h3.label-large Students
             .text-purple.font-semibold.text-40.leading-150{ class: 'h-[60px]' }
               = render ReactComponents::Impact::Stat.new(:sign_up_metric, Metrics.num_users.to_i)
