Automation details, cursor color, tooltips - no dark mode, svgs

--- a/app/css/components/completed-exercise-progress.css
+++ b/app/css/components/completed-exercise-progress.css
@@ -41,6 +41,7 @@
                     height: 24px;
                     width: 24px;
                     @apply mx-8;
+                    @apply filter-textColor1;
                 }
             }
             & .list {
