--- a/app/views/tracks/mentor_discussions/tooltip_locked.html.haml
+++ b/app/views/tracks/mentor_discussions/tooltip_locked.html.haml
@@ -1,5 +1,5 @@
 .c-generic-tooltip.text-14{ class: "!py-16 !px-24 !max-w-[420px]" }
-  %p.text-16.text-textColor9.font-semibold.leading-170.mb-12
+  %p.text-16.font-semibold.leading-170.mb-12
     Struggling with this exercise?
 
   %p.mb-4.leading-150
