--- a/app/css/components/accordion-section.css
+++ b/app/css/components/accordion-section.css
@@ -7,6 +7,7 @@
             height: 24px;
             width: 24px;
             @apply mr-16;
+            @apply filter-textColor6;
         }
         & > .--title {
             @apply text-16 font-semibold leading-paragraph;
