Add more filters and exceptions

--- a/app/css/components/mentor/discussion.css
+++ b/app/css/components/mentor/discussion.css
@@ -454,6 +454,7 @@
 
                             & .c-icon {
                                 width: 50%;
+                                @apply filter-textColor6;
                             }
                         }
                     }
