--- a/app/css/components/multiple-select.css
+++ b/app/css/components/multiple-select.css
@@ -22,6 +22,7 @@
             height: 16px;
             width: 16px;
             @apply ml-24 mr-0;
+            @apply filter-textColor6;
         }
     }
     & > .--options {
