--- a/app/css/pages/contributing-contributors.css
+++ b/app/css/pages/contributing-contributors.css
@@ -105,6 +105,7 @@
                 height: 16px;
                 width: 16px;
                 @apply ml-96;
+                @apply filter-textColor6;
             }
         }
         & .c-pagination {
