--- a/app/css/pages/track-build.css
+++ b/app/css/pages/track-build.css
@@ -351,6 +351,7 @@
 
     .highlight-text {
         @apply inline relative z-1;
+        @apply text-textColor1NoDark;
 
         background-color: transparent;
         &:before {
