--- a/app/views/profiles/badges.html.haml
+++ b/app/views/profiles/badges.html.haml
@@ -1,4 +1,4 @@
-- content_for :meta_title, "#{@user.handle}'s badges to Exercism"
+- content_for :meta_title, "#{sanitize(@user.handle)}'s badges to Exercism".html_safe
 - content_for :meta_description, "Explore #{@user.handle}'s badges on Exercism, and see which ones you're missing yourself"
 
 #page-profile-badges
