--- a/app/views/profiles/contributions.html.haml
+++ b/app/views/profiles/contributions.html.haml
@@ -1,4 +1,4 @@
-- content_for :meta_title, "#{@user.handle}'s contributions to Exercism"
+- content_for :meta_title, "#{sanitize(@user.handle)}'s contributions to Exercism".html_safe
 - content_for :meta_description, "See how #{@user.handle} has contributed to Exercism"
 
 #page-profile-contributions
