--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -88,11 +88,11 @@
         .flex.flex-col.items-start.mb-28
           .text-purple.font-semibold.leading-150.flex.items-center.mb-4
             %span.emoji.mr-6 📆
-            Month 2 of #12in23
-          %h2.text-h3 It's Functional February!
+            Month 3 of #12in23
+          %h2.text-h3 It's Mechanical March!
           %p.text-p-base.mb-6
-            We're exploring functional languages this month.
-            We have interviews with language creators, live streaming, and lots more.
+            We're exploring system languages this month (C, C++, D, Go, Nim, Rust, V and Zig).
+            We've got interviews, live-streams, badges, exclusive SWAG and more.
             Come and join in.
           = link_to challenge_path('12in23'), class: "btn btn-primary btn-base" do
             %span Explore #12in23
