Add Mechanical March mailer

--- a/app/views/mailers/mailshots_mailer/mechanical_march.html.erb
+++ b/app/views/mailers/mailshots_mailer/mechanical_march.html.erb
@@ -507,34 +507,37 @@ div.preheader {
                 <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
                   <p style="margin-top: 16px;margin-bottom: 0;">Hi <%= @user.handle %>,</p>
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    Here at Exercism, it's Functional February - a month dedicated to functional programming languages. 
+                  Welcome to Mechanical March, a month dedicated to languages that compile to machine code such as
+                  C, C++, D, Go, Nim, Rust, V and Zig!
                   </p>
 
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    We've put together a really fun month for you, with interviews with language creators (including Jose Valim and Louis Pilfold), tons of live streaming, lots of fun exercise for you to complete, and a whole load of community action going on. As always, it's all free!
+                    We're aiming to build on the success of Functional February with more interviews, more live streaming, more swag and more great content. 
+                    I'm delighted to announce that we've already lined up some amazing guests, including Josh Trippett, co-lead of Rust, and Johnny Boursiquot, a leading figure in Go.
+                    There's loads of community action going on on the forums and social media, and as always, it's all free!
                   </p>
 
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    You can find all the details on the 
+                    Visit our
                     <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://exercism.org/challenges/12in23"><span style="color:#2e57e8">#12in23 Challenge page</span></a>
-                    (sign up if you've not already - it's entirely free!)
-                    Or watch our
-                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://www.youtube.com/watch?v=uIFGx1SDnWI"><span style="color:#2e57e8">Intro to Functional February video</span></a>,
-                    which introduces the month and gives a nice overview of some key functional programming concepts - topics like immutability, pattern matching, recursion, first-class pure functions and more.
+                    for more details, or watch our
+                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://www.youtube.com/watch?v=UPDATEME"><span style="color:#2e57e8">Intro to Mechanical March video</span></a>,
+                    in which Erik and I introduce the month, discuss what makes machine code interesting, and give a brief overview and comparison of the featured languages.
                   </p>
 
                   <p style="margin-top: 15px;margin-bottom: 0;">
-                    <a href="https://www.youtube.com/watch?v=uIFGx1SDnWI" style="display:block; box-shadow: 0px 2px 4px #0F0923">
-                      <img src="https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-welcome-to-functional-february-with-play-icon.jpg" style="width:100%; display:block"/>
+                    <a href="https://www.youtube.com/watch?v=UPDATEME" style="display:block; box-shadow: 0px 2px 4px #0F0923">
+                      <img src="https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-mechanical-march-with-play-icon.jpg" style="width:100%; display:block"/>
                     </a>
                   </p>
 
                   <p style="margin-top: 25px;margin-bottom: 0;">
-                    If you've never tried functional languages before, they're a really eye-opening fun approach to coding. And if you're a functional pro, there's loads to challenge and inspire you here too!
+                    There's loads to challenge and inspire you this month, regardless of your level of experience.
+                    If you've not worked with low-level languages before, you'll find it fascinating and empowering to explore concepts like manual memory management. If you're more seasoned with systems languages, check out the cutting edge compiler in Rust, or the simplicity in Go.
                   </p>
 
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    Have a great day!
+                    Whatever you choose to explore, have fun!
                   </p>
 
                   <p style="margin-top: 20px;margin-bottom: 20px;">
