--- a/app/views/mailers/mailshots_mailer/mechanical_march.html.erb
+++ b/app/views/mailers/mailshots_mailer/mechanical_march.html.erb
@@ -521,12 +521,12 @@ div.preheader {
                     Visit our
                     <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://exercism.org/challenges/12in23"><span style="color:#2e57e8">#12in23 Challenge page</span></a>
                     for more details, or watch our
-                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://www.youtube.com/watch?v=UPDATEME"><span style="color:#2e57e8">Intro to Mechanical March video</span></a>,
+                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://www.youtube.com/watch?v=_PPXEJZ7gOg"><span style="color:#2e57e8">Intro to Mechanical March video</span></a>,
                     in which Erik and I introduce the month, discuss what makes machine code interesting, and give a brief overview and comparison of the featured languages.
                   </p>
 
                   <p style="margin-top: 15px;margin-bottom: 0;">
-                    <a href="https://www.youtube.com/watch?v=UPDATEME" style="display:block; box-shadow: 0px 2px 4px #0F0923">
+                    <a href="https://www.youtube.com/watch?v=_PPXEJZ7gOg" style="display:block; box-shadow: 0px 2px 4px #0F0923">
                       <img src="https://exercism-v3-icons.s3.eu-west-2.amazonaws.com/images/thumbnails/yt-mechanical-march-with-play-icon.jpg" style="width:100%; display:block"/>
                     </a>
                   </p>
