--- a/app/views/mailers/mailshots_mailer/mechanical_march.text.erb
+++ b/app/views/mailers/mailshots_mailer/mechanical_march.text.erb
@@ -7,7 +7,7 @@ We're aiming to build on the success of Functional February with more interviews
 Visit our #12in23 Challenge page for more details, or watch our Intro to Mechanical March video, in which Erik and I introduce the month, discuss what makes machine code interesting, and give a brief overview and comparison of the featured languages.
 
 - 12in23 page: https://exercism.org/challenges/12in23
-- Video: https://www.youtube.com/watch?v=UPDATEME
+- Video: https://www.youtube.com/watch?v=_PPXEJZ7gOg
 
 There's loads to challenge and inspire you this month, regardless of your level of experience. If you've not worked with low-level languages before, you'll find it fascinating and empowering to explore concepts like manual memory management. If you're more seasoned with systems languages, check out the cutting edge compiler in Rust, or the simplicity in Go.
 
