--- a/app/views/mailers/mailshots_mailer/mechanical_march.html.erb
+++ b/app/views/mailers/mailshots_mailer/mechanical_march.html.erb
@@ -550,7 +550,7 @@ div.preheader {
               <div style="margin-left: 20px;margin-right: 20px;">
                 <div class="btn btn--shadow btn--large" style="margin-bottom: 20px;">
                   <![if !mso]><a style="border-radius: 4px;display: inline-block;font-size: 16px;font-weight: bold;line-height: 24px;padding: 12px 24px 13px 24px;text-align: center;text-decoration: none !important;transition: opacity 0.1s ease-in;color: #ffffff !important;box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.2);background-color: #2e57e8;font-family: Poppins, Trebuchet MS, Avenir, Segoe UI, sans-serif;" href="https://exercism.org/challenges/12in23">
-                    GO TO FUNCTIONAL FEBRUARY
+                    GO TO MECHANICAL MARCH
                     <span style="font-size:20px;margin-left:5px">➡</span>
                   </a><![endif]>
               </div>
